# vue-ai-tools

./: .env.example  .env.local.example  .env.production.example  .env.staging.example  .gitignore  .gitmodules  Dockerfile  README.md  app.vue  docker-compose.nuxter.override.yml  docker-compose.nuxter.yml  docker-compose.yml  drizzle.config.ts  eslint.config.ts  nuxt.config.ts  nuxter-deploy.sh  nuxter-start.sh  package-lock.json  package.json  pnpm-lock.yaml
assets/: base.css  utils.css  variables.scss  vue-docs-index.json
components/: AppFooter.vue  AppHeader.vue  AppLoader.vue  AppLogin.vue  AppLogo.vue  AppSidebar.vue  AppSignUp.vue  AppToolbar.vue  ConfirmDialog.vue  MobileMenu.vue  NavMenu.vue  SimpleMenu.vue  StripeCheckout.vue  StripePortalButton.vue
composables/: useChatDb.ts  useOpenAi.ts  useParser.ts
index-builder/: Dockerfile  main.py  pyproject.toml  requirements.txt
index-builder/src/: __main__.py
layouts/: appDefault.vue  default.vue  home.vue
middleware/: auth.global.ts
nuxter-config/: Dockerfile.nuxt-app  Dockerfile.pb-db  nuxt-app.production.env.sample  nuxt-app.staging.env.sample  nuxter-base-compose.yml  production.env.sample  staging.env.sample  vue-ai-tools-production-compose.yml  vue-ai-tools-staging-compose.yml
pages/: [...slug].vue  about.vue  account.vue  dashboard.vue  email-verification.vue  index.vue  payment-confirm.vue  privacy-policy.vue  reset-password.vue  subscribe.vue  try.vue
pb_migrations/: 1703609164_created_transactions.js  1703627926_updated_chat_messages.js  1703632069_created_subscriptions.js  (+2 more)
server/: hello.ts  (+1 more)
(+267 files in other folders)
