[tool.poetry]
name = "index-builder"
version = "0.1.0"
description = "Build a vector index of various VueJS documentation pages"
authors = ["chrispaganon <info@chrispaganon.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
llama-index = "^0.10.52"
python-dotenv = "^1.0.1"
llama-index-embeddings-cohere = "^0.1.6"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-vector-stores-qdrant = "^0.2.10"
qdrant-client = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
